--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: You got pranked! Whoever sent this to you wanted to say that you are cute XD
+title: You got pranked! Whoever sent this to you wanted to say that you are cute XL
 
 # Your name to show in the footer
 author: the one and only
