--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: You got pranked! Whoever sent this to you wanted to say that you are cute XL
+title: Elias' website
 
 # Your name to show in the footer
-author: the one and only
+author: Elias Romero
 
 # --- List of links in the navigation bar --- #
 
